feat: 카드 수정과 삭제 서버 영구 반영