@@ -1,5 +1,8 @@
 package com.kbw.caplog.card.service;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.kbw.caplog.card.dto.CardDto;
 import com.kbw.caplog.card.dto.CreateCardRequest;
 import com.kbw.caplog.recommendation.domain.Screenshot;
@@ -23,6 +26,7 @@ public class CardService {
 
     private final ScreenshotRepository screenshotRepository;
     private final GeocodeService geocodeService;
+    private final ObjectMapper objectMapper;
 
     @Value("${app.baseUrl:http://localhost:8080}")
     private String baseUrl;
@@ -33,20 +37,7 @@ public class CardService {
     public CardDto createCard(Long userNo, CreateCardRequest req) {
         Screenshot s = new Screenshot();
         s.setUserNo(userNo);
-        s.setCategoryId(categoryNameToId(req.getCategory()));
-        s.setTitle(req.getTitle() != null ? truncate(req.getTitle(), 120) : "제목 없음");
-        s.setSummary(req.getSummary() != null ? truncate(req.getSummary(), 255) : null);
-        s.setPlaceName(req.getFields() != null
-                ? truncate(firstNonBlank(req.getFields(), "장소명", "place_name", "가게명"), 120)
-                : null);
-        s.setAddress(req.getFields() != null
-                ? truncate(firstNonBlank(req.getFields(), "주소", "address"), 255)
-                : null);
-        String imgUrl = req.getThumbnailURL();
-        if ((imgUrl == null || imgUrl.isBlank()) && req.getScreenshotURLs() != null && !req.getScreenshotURLs().isEmpty()) {
-            imgUrl = req.getScreenshotURLs().get(0);
-        }
-        s.setImageUrl(imgUrl != null ? truncate(imgUrl, 255) : null);
+        applyRequest(s, req);
         s.setGeocodeStatus((short) 0);
         s.setGeocodeAttempts(0);
         s.setGeocodeConfidence((short) 0);
@@ -60,6 +51,90 @@ public class CardService {
             }
         }
         return toCardDto(saved);
+    }
+
+    /** 현재 사용자가 소유한 카드만 수정합니다. */
+    public CardDto updateCard(Long userNo, String externalId, CreateCardRequest req) {
+        Long screenshotId = externalIdToLong(externalId);
+        Screenshot screenshot = screenshotRepository.findByIdAndUserNo(screenshotId, userNo)
+                .orElseThrow(() -> new IllegalArgumentException("Card not found"));
+
+        String previousPlaceName = screenshot.getPlaceName();
+        String previousAddress = screenshot.getAddress();
+        applyRequest(screenshot, req);
+        boolean locationChanged = !Objects.equals(previousPlaceName, screenshot.getPlaceName())
+                || !Objects.equals(previousAddress, screenshot.getAddress());
+        if (locationChanged) {
+            screenshot.setLat(null);
+            screenshot.setLng(null);
+            screenshot.setGeocodeStatus((short) 0);
+            screenshot.setGeocodeAttempts(0);
+            screenshot.setGeocodeConfidence((short) 0);
+        }
+
+        Screenshot saved = screenshotRepository.save(screenshot);
+        if (locationChanged && hasLocationText(saved)) {
+            try {
+                geocodeService.geocodeOne(saved.getId(), userNo);
+            } catch (RuntimeException error) {
+                System.out.println("⚠️ 카드 위치 재변환 예약 실패: " + error.getMessage());
+            }
+        }
+        return toCardDto(saved);
+    }
+
+    /** 현재 사용자가 소유한 카드만 삭제합니다. */
+    public void deleteCard(Long userNo, String externalId) {
+        Long screenshotId = externalIdToLong(externalId);
+        Screenshot screenshot = screenshotRepository.findByIdAndUserNo(screenshotId, userNo)
+                .orElseThrow(() -> new IllegalArgumentException("Card not found"));
+        screenshotRepository.delete(screenshot);
+    }
+
+    private void applyRequest(Screenshot screenshot, CreateCardRequest req) {
+        screenshot.setCategoryId(categoryNameToId(req.getCategory()));
+        screenshot.setTitle(req.getTitle() != null && !req.getTitle().isBlank()
+                ? truncate(req.getTitle().trim(), 120)
+                : "제목 없음");
+        screenshot.setSummary(req.getSummary() != null ? truncate(req.getSummary(), 255) : null);
+        screenshot.setSubcategory(req.getSubcategory() != null
+                ? truncate(req.getSubcategory().trim(), 80)
+                : null);
+        screenshot.setTagsJson(writeJson(req.getTags() != null ? req.getTags() : List.of()));
+        screenshot.setFieldsJson(writeJson(req.getFields() != null ? req.getFields() : Map.of()));
+        screenshot.setPlaceName(req.getFields() != null
+                ? truncate(firstNonBlank(req.getFields(), "장소명", "place_name", "가게명"), 120)
+                : null);
+        screenshot.setAddress(req.getFields() != null
+                ? truncate(firstNonBlank(req.getFields(), "주소", "address"), 255)
+                : null);
+        String imgUrl = req.getThumbnailURL();
+        if ((imgUrl == null || imgUrl.isBlank()) && req.getScreenshotURLs() != null && !req.getScreenshotURLs().isEmpty()) {
+            imgUrl = req.getScreenshotURLs().get(0);
+        }
+        screenshot.setImageUrl(imgUrl != null ? truncate(imgUrl, 255) : null);
+    }
+
+    private static boolean hasLocationText(Screenshot screenshot) {
+        return (screenshot.getPlaceName() != null && !screenshot.getPlaceName().isBlank())
+                || (screenshot.getAddress() != null && !screenshot.getAddress().isBlank());
+    }
+
+    private String writeJson(Object value) {
+        try {
+            return objectMapper.writeValueAsString(value);
+        } catch (JsonProcessingException error) {
+            throw new IllegalArgumentException("Invalid card data", error);
+        }
+    }
+
+    private <T> T readJson(String json, TypeReference<T> type, T fallback) {
+        if (json == null || json.isBlank()) return fallback;
+        try {
+            return objectMapper.readValue(json, type);
+        } catch (JsonProcessingException error) {
+            return fallback;
+        }
     }
 
     private static String truncate(String value, int maxLen) {
@@ -119,17 +194,28 @@ public class CardService {
         String uuidStr = longToUuidString(s.getId());
 
         String category = mapCategoryId(s.getCategoryId());
-        String subcategory = mapSubcategory(category, s.getPlaceName());
+        String subcategory = s.getSubcategory() != null && !s.getSubcategory().isBlank()
+                ? s.getSubcategory()
+                : mapSubcategory(category, s.getPlaceName());
 
-        Map<String, String> fields = new HashMap<>();
+        Map<String, String> fields = new HashMap<>(readJson(
+                s.getFieldsJson(),
+                new TypeReference<Map<String, String>>() {},
+                Map.of()
+        ));
         if (s.getPlaceName() != null) fields.put("장소명", s.getPlaceName());
         if (s.getAddress() != null) fields.put("주소", s.getAddress());
-        if (s.getTitle() != null) fields.put("가게명", s.getTitle());
 
-        List<String> tags = new ArrayList<>();
-        if (s.getPlaceName() != null) tags.add(s.getPlaceName());
-        if (s.getSummary() != null && !s.getSummary().isBlank()) {
-            tags.addAll(Arrays.asList(s.getSummary().split("\\s+")));
+        List<String> tags = new ArrayList<>(readJson(
+                s.getTagsJson(),
+                new TypeReference<List<String>>() {},
+                List.of()
+        ));
+        if (s.getTagsJson() == null) {
+            if (s.getPlaceName() != null) tags.add(s.getPlaceName());
+            if (s.getSummary() != null && !s.getSummary().isBlank()) {
+                tags.addAll(Arrays.asList(s.getSummary().split("\\s+")));
+            }
         }
 
         String imgUrl = s.getImageUrl();
@@ -146,8 +232,8 @@ public class CardService {
                 .subcategory(subcategory)
                 .tags(tags)
                 .fields(fields)
-                .createdAt(Instant.now())
-                .updatedAt(Instant.now())
+                .createdAt(s.getCreatedAt() != null ? s.getCreatedAt() : Instant.now())
+                .updatedAt(s.getUpdatedAt() != null ? s.getUpdatedAt() : Instant.now())
                 .thumbnailURL(imgUrl)
                 .screenshotURLs(screenshotURLs)
                 .build();
